--- a/BasicSkeleton/test-output/old/Suite/methods-alphabetical.html
+++ b/BasicSkeleton/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6498bf">  <td>20/11/27 21:22:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.W3SchoolsestMethod()[pri:0, instance:tests.SampleClass@123f1134]">W3SchoolsestMethod</td> 
-  <td>TestNG-test=Test-1@346790083</td>   <td></td> </tr>
-<tr bgcolor="6498bf">  <td>20/11/27 21:22:37</td>   <td>-117</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.ZoomMethod()[pri:0, instance:tests.SampleClass@123f1134]">ZoomMethod</td> 
-  <td>TestNG-test=Test-2@614702883</td>   <td></td> </tr>
-<tr bgcolor="6f8775">  <td>20/11/27 21:22:31</td>   <td>-5460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@123f1134]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@614702883</td>   <td></td> </tr>
-<tr bgcolor="6f8775">  <td>20/11/27 21:22:31</td>   <td>-5460</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@123f1134]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td>  <td>TestNG-test=Test-2@614702883</td>   <td></td> </tr>
+<tr bgcolor="9499f1">  <td>20/11/28 15:35:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass_SameURL1.Method2_URL1()[pri:0, instance:tests.SampleClass_SameURL1@235ecd9f]">Method2_URL1</td> 
+  <td>TestNG-test=Test-1@759005998</td>   <td></td> </tr>
+<tr bgcolor="e2e487">  <td>20/11/28 15:35:41</td>   <td>-2948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass_SameURL2.W3SchoolsestMethod()[pri:0, instance:tests.SampleClass_SameURL2@1ca3b418]">W3SchoolsestMethod</td> 
+  <td>TestNG-test=Test-2@1565181727</td>   <td></td> </tr>
+<tr bgcolor="e2e487">  <td>20/11/28 15:35:41</td>   <td>-2942</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass_SameURL2.W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass_SameURL2@1ca3b418]">W3SchoolsestMethod2</td> 
+  <td>TestNG-test=Test-2@1565181727</td>   <td></td> </tr>
+<tr bgcolor="a0cee9">  <td>20/11/28 15:35:29</td>   <td>-14502</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass_SameURL2@1ca3b418]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-2@1565181727</td>   <td></td> </tr>
+<tr bgcolor="a0cee9">  <td>20/11/28 15:35:29</td>   <td>-14502</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass_SameURL1@235ecd9f]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-1@759005998</td>   <td></td> </tr>
 </table>
