--- a/BasicSkeleton/test-output/index.html
+++ b/BasicSkeleton/test-output/index.html
@@ -206,7 +206,7 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite&quot; parallel=&quot;classes&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;framework.ExtentReportListeners&quot;/&gt;
   &lt;/listeners&gt;
@@ -255,7 +255,7 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'W3SchoolsestMethod')
+data.setCell(0, 1, 'W3SchoolsestMethod2')
 data.setCell(0, 2, 'tests.SampleClass_SameURL2')
 data.setCell(0, 3, 0);
 data.setCell(1, 0, 1)
@@ -263,7 +263,7 @@ data.setCell(1, 1, 'Method2_URL1')
 data.setCell(1, 2, 'tests.SampleClass_SameURL1')
 data.setCell(1, 3, 0);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'W3SchoolsestMethod2')
+data.setCell(2, 1, 'W3SchoolsestMethod')
 data.setCell(2, 2, 'tests.SampleClass_SameURL2')
 data.setCell(2, 3, 0);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
@@ -296,6 +296,13 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
+              <div class="chronological-class-name">tests.SampleClass_SameURL1</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">Method2_URL1</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
               <div class="chronological-class-name">tests.SampleClass_SameURL2</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">W3SchoolsestMethod</span>
@@ -305,16 +312,6 @@ return data;
                 <span class="method-name">W3SchoolsestMethod2</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">tests.SampleClass_SameURL1</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">Method2_URL1</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">tests.SampleClass_SameURL2</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <img src="failed.png">
                 </img>
