--- a/BasicSkeleton/test-output/emailable-report.html
+++ b/BasicSkeleton/test-output/emailable-report.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "https://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <title>TestNG Report</title>
@@ -7,63 +7,63 @@
 </head>
 <body>
 <table>
-<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num attn">3</td><td class="num">0</td><td class="num">14,736</td><td></td><td></td></tr>
+<tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">0</td><td class="num attn">3</td><td class="num">0</td><td class="num">0</td><td class="num">78,952</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">tests.SampleClass_SameURL1</td><td><a href="#m0">initializeDriver</a></td><td rowspan="1">1606740430228</td><td rowspan="1">14490</td></tr><tr class="failedodd"><td rowspan="1">tests.SampleClass_SameURL2</td><td><a href="#m1">initializeDriver</a></td><td rowspan="1">1606740430228</td><td rowspan="1">14690</td></tr><tr><th colspan="4">Test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="1">tests.SampleClass_SameURL1</td><td><a href="#m2">cleanUp</a></td><td rowspan="1">1606740444748</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="1">tests.SampleClass_SameURL2</td><td><a href="#m3">cleanUp</a></td><td rowspan="1">1606740444928</td><td rowspan="1">0</td></tr><tr><th colspan="4">Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">tests.SampleClass_SameURL1</td><td><a href="#m4">Method2_URL1</a></td><td rowspan="1">1606740444746</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="2">tests.SampleClass_SameURL2</td><td><a href="#m5">W3SchoolsestMethod</a></td><td rowspan="1">1606740444924</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td><a href="#m6">W3SchoolsestMethod2</a></td><td rowspan="1">1606740444926</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">tests.SampleClass_SameURL1</td><td><a href="#m0">initializeDriver</a></td><td rowspan="1">1606742734947</td><td rowspan="1">78066</td></tr><tr class="failedodd"><td rowspan="1">tests.SampleClass_SameURL2</td><td><a href="#m1">initializeDriver</a></td><td rowspan="1">1606742734947</td><td rowspan="1">77836</td></tr><tr><th colspan="4">Test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="1">tests.SampleClass_SameURL1</td><td><a href="#m2">cleanUp</a></td><td rowspan="1">1606742813813</td><td rowspan="1">-1606742813813</td></tr><tr class="skippedodd"><td rowspan="1">tests.SampleClass_SameURL2</td><td><a href="#m3">cleanUp</a></td><td rowspan="1">1606742813835</td><td rowspan="1">-1606742813835</td></tr><tr><th colspan="4">Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">tests.SampleClass_SameURL1</td><td><a href="#m4">Method2_URL1</a></td><td rowspan="1">1606742813310</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td rowspan="2">tests.SampleClass_SameURL2</td><td><a href="#m5">W3SchoolsestMethod</a></td><td rowspan="1">1606742813310</td><td rowspan="1">0</td></tr><tr class="skippedodd"><td><a href="#m6">W3SchoolsestMethod2</a></td><td rowspan="1">1606742813804</td><td rowspan="1">0</td></tr></tbody>
 </table>
 <h2>Test</h2><h3 id="m0">tests.SampleClass_SameURL1#initializeDriver</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
 	at framework.WebListeners.afterNavigateTo(WebListeners.java:28)
 	at org.openqa.selenium.support.events.EventFiringWebDriver.lambda$new$0(EventFiringWebDriver.java:84)
-	at com.sun.proxy.$Proxy8.afterNavigateTo(Unknown Source)
+	at com.sun.proxy.$Proxy10.afterNavigateTo(Unknown Source)
 	at org.openqa.selenium.support.events.EventFiringWebDriver$EventFiringNavigation.to(EventFiringWebDriver.java:570)
 	at framework.TestBase.initializeDriver(TestBase.java:27)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:832)
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">tests.SampleClass_SameURL2#initializeDriver</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
 	at framework.WebListeners.afterNavigateTo(WebListeners.java:28)
 	at org.openqa.selenium.support.events.EventFiringWebDriver.lambda$new$0(EventFiringWebDriver.java:84)
-	at com.sun.proxy.$Proxy8.afterNavigateTo(Unknown Source)
+	at com.sun.proxy.$Proxy10.afterNavigateTo(Unknown Source)
 	at org.openqa.selenium.support.events.EventFiringWebDriver$EventFiringNavigation.to(EventFiringWebDriver.java:570)
 	at framework.TestBase.initializeDriver(TestBase.java:27)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:832)
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m2">tests.SampleClass_SameURL1#cleanUp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">tests.SampleClass_SameURL2#cleanUp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m4">tests.SampleClass_SameURL1#Method2_URL1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
 	at framework.WebListeners.afterNavigateTo(WebListeners.java:28)
 	at org.openqa.selenium.support.events.EventFiringWebDriver.lambda$new$0(EventFiringWebDriver.java:84)
-	at com.sun.proxy.$Proxy8.afterNavigateTo(Unknown Source)
+	at com.sun.proxy.$Proxy10.afterNavigateTo(Unknown Source)
 	at org.openqa.selenium.support.events.EventFiringWebDriver$EventFiringNavigation.to(EventFiringWebDriver.java:570)
 	at framework.TestBase.initializeDriver(TestBase.java:27)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:832)
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m5">tests.SampleClass_SameURL2#W3SchoolsestMethod</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
 	at framework.WebListeners.afterNavigateTo(WebListeners.java:28)
 	at org.openqa.selenium.support.events.EventFiringWebDriver.lambda$new$0(EventFiringWebDriver.java:84)
-	at com.sun.proxy.$Proxy8.afterNavigateTo(Unknown Source)
+	at com.sun.proxy.$Proxy10.afterNavigateTo(Unknown Source)
 	at org.openqa.selenium.support.events.EventFiringWebDriver$EventFiringNavigation.to(EventFiringWebDriver.java:570)
 	at framework.TestBase.initializeDriver(TestBase.java:27)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:832)
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m6">tests.SampleClass_SameURL2#W3SchoolsestMethod2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
 	at framework.WebListeners.afterNavigateTo(WebListeners.java:28)
 	at org.openqa.selenium.support.events.EventFiringWebDriver.lambda$new$0(EventFiringWebDriver.java:84)
-	at com.sun.proxy.$Proxy8.afterNavigateTo(Unknown Source)
+	at com.sun.proxy.$Proxy10.afterNavigateTo(Unknown Source)
 	at org.openqa.selenium.support.events.EventFiringWebDriver$EventFiringNavigation.to(EventFiringWebDriver.java:570)
 	at framework.TestBase.initializeDriver(TestBase.java:27)
-	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)
-	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)
-	at java.lang.Thread.run(Thread.java:748)
-... Removed 15 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:832)
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
