tesng methods final

--- a/BasicSkeleton/test-output/old/Suite/classes.html
+++ b/BasicSkeleton/test-output/old/Suite/classes.html
@@ -4,25 +4,29 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.SampleClass_SameURL1</td>
+<td>tests.SampleClass</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Method2_URL1</td>
+<td>one_W3SchoolsestMethod1</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>one_W3SchoolsestMethod2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
 <td>&nbsp;</td>
 <td>initializeDriver</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
@@ -30,41 +34,33 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>cleanUp</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>tests.SampleClass_SameURL2</td>
+<td>tests.SampleClass2</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>W3SchoolsestMethod2</td>
+<td>two_W3SchoolsestMethod2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>W3SchoolsestMethod</td>
+<td>two_W3SchoolsestMethod1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>initializeDriver</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>cleanUp</td>
-<td>&nbsp;</td></tr>
 </table>
