--- a/BasicSkeleton/test-output/index.html
+++ b/BasicSkeleton/test-output/index.html
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-skipped">Suite</span>
+              <span class="suite-name border-passed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -93,31 +93,36 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,  3 skipped,  </span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title skipped">Skipped methods</span>
-                    <span class="show-or-hide-methods skipped">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods skipped suite-Suite"> (hide)</a> <!-- hide-methods skipped suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods skipped suite-Suite"> (show)</a> <!-- show-methods skipped suite-Suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
                     </span>
-                    <div class="method-list-content skipped suite-Suite">
+                    <div class="method-list-content passed suite-Suite">
                       <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="tests.SampleClass_SameURL1" class="method navigator-link" hash-for-method="Method2_URL1">Method2_URL1</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="tests.SampleClass" class="method navigator-link" hash-for-method="one_W3SchoolsestMethod1">one_W3SchoolsestMethod1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="tests.SampleClass_SameURL2" class="method navigator-link" hash-for-method="W3SchoolsestMethod">W3SchoolsestMethod</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="tests.SampleClass" class="method navigator-link" hash-for-method="one_W3SchoolsestMethod2">one_W3SchoolsestMethod2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="tests.SampleClass_SameURL2" class="method navigator-link" hash-for-method="W3SchoolsestMethod2">W3SchoolsestMethod2</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="tests.SampleClass2" class="method navigator-link" hash-for-method="two_W3SchoolsestMethod1">two_W3SchoolsestMethod1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content skipped suite-Suite -->
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="tests.SampleClass2" class="method navigator-link" hash-for-method="two_W3SchoolsestMethod2">two_W3SchoolsestMethod2</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -129,76 +134,50 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-skipped">
+          <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="skipped.png"/>
-              <span class="class-name">tests.SampleClass_SameURL1</span>
+              <img src="passed.png"/>
+              <span class="class-name">tests.SampleClass</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Method2_URL1">
-                  </a> <!-- Method2_URL1 -->
-                  <span class="method-name">Method2_URL1</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at framework.WebListeners.afterNavigateTo(WebListeners.java:28)
-	at org.openqa.selenium.support.events.EventFiringWebDriver.lambda$new$0(EventFiringWebDriver.java:84)
-	at com.sun.proxy.$Proxy10.afterNavigateTo(Unknown Source)
-	at org.openqa.selenium.support.events.EventFiringWebDriver$EventFiringNavigation.to(EventFiringWebDriver.java:570)
-	at framework.TestBase.initializeDriver(TestBase.java:27)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
-	at java.base/java.lang.Thread.run(Thread.java:832)
-... Removed 14 stack frames
-</div> <!-- stack-trace -->
+                  <a name="one_W3SchoolsestMethod1">
+                  </a> <!-- one_W3SchoolsestMethod1 -->
+                  <span class="method-name">one_W3SchoolsestMethod1</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="one_W3SchoolsestMethod2">
+                  </a> <!-- one_W3SchoolsestMethod2 -->
+                  <span class="method-name">one_W3SchoolsestMethod2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-skipped -->
-          <div class="suite-Suite-class-skipped">
+          </div> <!-- suite-Suite-class-passed -->
+          <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="skipped.png"/>
-              <span class="class-name">tests.SampleClass_SameURL2</span>
+              <img src="passed.png"/>
+              <span class="class-name">tests.SampleClass2</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="W3SchoolsestMethod">
-                  </a> <!-- W3SchoolsestMethod -->
-                  <span class="method-name">W3SchoolsestMethod</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at framework.WebListeners.afterNavigateTo(WebListeners.java:28)
-	at org.openqa.selenium.support.events.EventFiringWebDriver.lambda$new$0(EventFiringWebDriver.java:84)
-	at com.sun.proxy.$Proxy10.afterNavigateTo(Unknown Source)
-	at org.openqa.selenium.support.events.EventFiringWebDriver$EventFiringNavigation.to(EventFiringWebDriver.java:570)
-	at framework.TestBase.initializeDriver(TestBase.java:27)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
-	at java.base/java.lang.Thread.run(Thread.java:832)
-... Removed 14 stack frames
-</div> <!-- stack-trace -->
+                  <a name="two_W3SchoolsestMethod1">
+                  </a> <!-- two_W3SchoolsestMethod1 -->
+                  <span class="method-name">two_W3SchoolsestMethod1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="W3SchoolsestMethod2">
-                  </a> <!-- W3SchoolsestMethod2 -->
-                  <span class="method-name">W3SchoolsestMethod2</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at framework.WebListeners.afterNavigateTo(WebListeners.java:28)
-	at org.openqa.selenium.support.events.EventFiringWebDriver.lambda$new$0(EventFiringWebDriver.java:84)
-	at com.sun.proxy.$Proxy10.afterNavigateTo(Unknown Source)
-	at org.openqa.selenium.support.events.EventFiringWebDriver$EventFiringNavigation.to(EventFiringWebDriver.java:570)
-	at framework.TestBase.initializeDriver(TestBase.java:27)
-	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
-	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
-	at java.base/java.lang.Thread.run(Thread.java:832)
-... Removed 14 stack frames
-</div> <!-- stack-trace -->
+                  <a name="two_W3SchoolsestMethod2">
+                  </a> <!-- two_W3SchoolsestMethod2 -->
+                  <span class="method-name">two_W3SchoolsestMethod2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-skipped -->
+          </div> <!-- suite-Suite-class-passed -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -208,14 +187,14 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite parallel=&quot;classes&quot; name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+&lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
     &lt;listener class-name=&quot;framework.ExtentReportListeners&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; parallel=&quot;classes&quot; name=&quot;Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; parallel=&quot;methods&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.SampleClass_SameURL1&quot;/&gt;
-      &lt;class name=&quot;tests.SampleClass_SameURL2&quot;/&gt;
+      &lt;class name=&quot;tests.SampleClass&quot;/&gt;
+      &lt;class name=&quot;tests.SampleClass2&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -255,24 +234,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Method2_URL1')
-data.setCell(0, 2, 'tests.SampleClass_SameURL1')
-data.setCell(0, 3, 0);
+data.setCell(0, 1, 'two_W3SchoolsestMethod2')
+data.setCell(0, 2, 'tests.SampleClass2')
+data.setCell(0, 3, 7300);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'W3SchoolsestMethod2')
-data.setCell(1, 2, 'tests.SampleClass_SameURL2')
-data.setCell(1, 3, 0);
+data.setCell(1, 1, 'two_W3SchoolsestMethod1')
+data.setCell(1, 2, 'tests.SampleClass2')
+data.setCell(1, 3, 6471);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'W3SchoolsestMethod')
-data.setCell(2, 2, 'tests.SampleClass_SameURL2')
-data.setCell(2, 3, 0);
+data.setCell(2, 1, 'one_W3SchoolsestMethod1')
+data.setCell(2, 2, 'tests.SampleClass')
+data.setCell(2, 3, 5615);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'one_W3SchoolsestMethod2')
+data.setCell(3, 2, 'tests.SampleClass')
+data.setCell(3, 3, 5289);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 0 ms</span>
+              <span class="suite-total-time">Total running time: 24 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -298,57 +281,54 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.SampleClass_SameURL2</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <img src="failed.png">
-                </img>
+              <div class="chronological-class-name">tests.SampleClass2</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
                 <span class="method-name">initializeDriver</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-method before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.SampleClass_SameURL1</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <img src="failed.png">
-                </img>
+              <div class="chronological-class-name">tests.SampleClass</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
                 <span class="method-name">initializeDriver</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">initializeDriver</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.SampleClass_SameURL2</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.SampleClass2</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">initializeDriver</span>
+                <span class="method-start">1 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">W3SchoolsestMethod</span>
-                <span class="method-start">78363 ms</span>
+                <span class="method-name">two_W3SchoolsestMethod2</span>
+                <span class="method-start">18729 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.SampleClass_SameURL1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.SampleClass</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">Method2_URL1</span>
-                <span class="method-start">78363 ms</span>
+                <span class="method-name">one_W3SchoolsestMethod2</span>
+                <span class="method-start">24682 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.SampleClass_SameURL2</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.SampleClass2</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">W3SchoolsestMethod2</span>
-                <span class="method-start">78857 ms</span>
+                <span class="method-name">two_W3SchoolsestMethod1</span>
+                <span class="method-start">26686 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.SampleClass_SameURL1</div> <!-- chronological-class-name -->
-              <div class="configuration-class after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">78866 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">tests.SampleClass_SameURL2</div> <!-- chronological-class-name -->
-              <div class="configuration-class after">
-                <span class="method-name">cleanUp</span>
-                <span class="method-start">78888 ms</span>
-              </div> <!-- configuration-class after -->
+              <div class="chronological-class-name">tests.SampleClass</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">one_W3SchoolsestMethod1</span>
+                <span class="method-start">27395 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
