--- a/BasicSkeleton/test-output/old/Suite/methods-alphabetical.html
+++ b/BasicSkeleton/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="97aea5">  <td>20/11/30 18:56:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass_SameURL1.Method2_URL1()[pri:0, instance:tests.SampleClass_SameURL1@55634720]">Method2_URL1</td> 
+<tr bgcolor="8a67b4">  <td>20/11/30 19:51:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@4b0d79fc]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@1200043120</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 19:51:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@55634720]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1904787136</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 19:51:01</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass@55634720]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-1@1904787136</td>   <td></td> </tr>
+<tr bgcolor="8a67b4">  <td>20/11/30 19:51:01</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass2@4b0d79fc]">&gt;&gt;initializeDriver</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Test-3@1200043120</td>   <td></td> </tr>
+<tr bgcolor="97aea5">  <td>20/11/30 19:51:28</td>   <td>27389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass@55634720]">one_W3SchoolsestMethod1</td> 
   <td>TestNG-test=Test-1@1904787136</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>20/11/30 18:56:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass_SameURL2.W3SchoolsestMethod()[pri:0, instance:tests.SampleClass_SameURL2@4b0d79fc]">W3SchoolsestMethod</td> 
-  <td>TestNG-test=Test-2@61812748</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>20/11/30 18:56:53</td>   <td>495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass_SameURL2.W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass_SameURL2@4b0d79fc]">W3SchoolsestMethod2</td> 
-  <td>TestNG-test=Test-2@61812748</td>   <td></td> </tr>
-<tr bgcolor="97aea5">  <td>20/11/30 18:56:53</td>   <td>505</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleClass_SameURL1.cleanUp()[pri:0, instance:tests.SampleClass_SameURL1@55634720]">&lt;&lt;cleanUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>20/11/30 18:56:53</td>   <td>527</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleClass_SameURL2.cleanUp()[pri:0, instance:tests.SampleClass_SameURL2@4b0d79fc]">&lt;&lt;cleanUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/11/30 18:55:34</td>   <td>-78352</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass_SameURL2@4b0d79fc]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-2@61812748</td>   <td></td> </tr>
-<tr bgcolor="8a67b4">  <td>20/11/30 18:55:34</td>   <td>-78352</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeDriver()[pri:0, instance:tests.SampleClass_SameURL1@55634720]">&gt;&gt;initializeDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-test=Test-1@1904787136</td>   <td></td> </tr>
+<tr bgcolor="97aea5">  <td>20/11/30 19:51:25</td>   <td>24676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass.one_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass@55634720]">one_W3SchoolsestMethod2</td> 
+  <td>TestNG-test=Test-2@1586329546</td>   <td></td> </tr>
+<tr bgcolor="736ca5">  <td>20/11/30 19:51:27</td>   <td>26680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod1()[pri:0, instance:tests.SampleClass2@4b0d79fc]">two_W3SchoolsestMethod1</td> 
+  <td>TestNG-test=Test-3@1200043120</td>   <td></td> </tr>
+<tr bgcolor="736ca5">  <td>20/11/30 19:51:19</td>   <td>18723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleClass2.two_W3SchoolsestMethod2()[pri:0, instance:tests.SampleClass2@4b0d79fc]">two_W3SchoolsestMethod2</td> 
+  <td>TestNG-test=Test-4@2019271609</td>   <td></td> </tr>
 </table>
